--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
  h1{
-    color: antiquewhite;
+    color: rgb(250, 144, 4);
     text-align: center;
-    background-color: rgb(236, 186, 186);
+    background-color: rgb(247, 187, 187);
     padding: 20px;
     border: solid rgb(234, 179, 179);
  }
