--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
  }
  body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: rgb(238, 229, 229);
+    background-color: rgb(228, 130, 130);
     line-height: 1.6;
     padding: 20px;
  }
@@ -15,13 +15,20 @@
   width: 60%;
   margin: 20px auto;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  border: solid rgb(106, 60, 60) 5px;
+  border: solid rgb(188, 114, 171) 5px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  box-shadow: 10px 0 10px 0 rgb(188, 114, 171);
+  gap: 200px;
   }
-.button-container{
-   display: flex;
-   flex-direction: column;
-   gap: 30px;
-}
+
+  button{
+    background-color: rgb(243, 206, 234);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
